# legacy

./: README.md
private/applications/ax-s/: README.md
private/applications/ax-s/api/: admin.py  apps.py  models.py  tests.py  urls.py  utils.py  views.py
private/applications/ax-s/api/migrations/: 0001_initial.py  0002_auto_20190117_1001.py  0003_error.py  0004_endpoint_targets.py  0005_auto_20190316_1255.py  0006_remove_endpoint_auth.py
private/applications/ax-s/app/: admin.py  apps.py  crons.py  models.py  tests.py  urls.py  utils.py  views.py
private/applications/ax-s/app/migrations/: 0001_initial.py
private/applications/ax-s/ax_s/: settings.py  urls.py  wsgi.py
private/applications/pathfindr/: README.md
private/applications/pathfindr/app/: admin.py  apps.py  crons.py  models.py  tests.py  urls.py  utils.py  views.py
private/applications/pathfindr/pathfindr/: settings.py  urls.py  wsgi.py
smartrecruiters/era_2/applications/leadr/: README.md
smartrecruiters/era_2/applications/smartfinder/: README.md
smartrecruiters/era_2/applications/smartsheets/: README.md
smartrecruiters/era_2/scripts/smarty-legacy/: README.md
smartrecruiters/era_3/applications/smarthub/: README.md  app.py
smartrecruiters/era_3/libraries/satellites/: README.md  pyproject.toml
smartrecruiters/era_3/libraries/satellites/satellites/: __init__.py  decorators.py  e.py  s.py  spy.py
smartrecruiters/era_3/microservices/satellite-e/: README.md
smartrecruiters/era_3/microservices/satellite-s/: README.md
smartrecruiters/era_3/microservices/satellite-spy/: README.md
(+166 files in other folders)
