[tool.poetry]
name = "satellites"
version = "0.3.0"
description = "A client library for the Smartian Satellites."
authors = ["Elliott Maguire <e.maguire@smartrecruiters.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.21"
django = "^2.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
